--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </links>
 <head>
  <title>HidroJetta</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+ <meta name="HandheldFriendly" content="true">
 </head>
 <body>
  <div class="updiv">
